# shiny_sample_app

./: README.md  pyproject.toml  requirements.txt
app/: sample.py  style.css
