[tool.poetry]
name = "shiny-sample-app"
version = "0.1.0"
description = ""
authors = ["imamtagupta <mamtag962000@gmail.com>"]
readme = "README.md"
packages = [{include = "shiny_sample_app"}]

[tool.poetry.dependencies]
python = "^3.10"
shiny = "^0.7.1"
matplotlib = "^3.8.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
